<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:gravity="center"
    android:minHeight="200dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/secondary"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/create_room"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:minWidth="@dimen/room_icon"
            android:minHeight="@dimen/room_icon"
            app:layout_constraintBottom_toBottomOf="@+id/title_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/x" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/button_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_view">

            <TextView
                android:id="@+id/room_round_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="20sp"
                android:text="@string/around_text"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/room_round_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/room_round_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/gray_square"
                android:gravity="center"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/textView14"
                app:layout_constraintStart_toEndOf="@+id/room_round_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="20sp"
                android:text="km"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/room_round_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/room_round_edit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/no_button"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/button_back1"
                android:text="@string/before"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yes_button"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/button_back1"
                android:text="@string/ok"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>